# certbot-dns-godaddy

./: .dockerignore  .env.example  .gitignore  .tool-versions  Dockerfile  Makefile  certbot_dns_godaddy.py  credentials.ini.example  docker-compose.yml  pyproject.toml  requirements.txt  taskfile.yml
.github/workflows/: ci.yml
